# semanticsilm

./: .gitignore  README.md  pyproject.toml
data/: chapter11.txt  chapter12.txt  chapter15.txt  chapter17.txt  chapter18.txt  chapter23.txt  chapter3.txt  chapter4.txt  chapter6.txt  forward.txt  names_appendix.txt
output/1/: silmarillion_graph_plotly.html
output/2/: silmarillion_graph_plotly.html
src/semanticsilm/: __init__.py  main.py  preprocess.py  visualize.py
src/semanticsilm/data/: appendix.txt  chapter1.txt  chapter10.txt  chapter13.txt  chapter14.txt  chapter16.txt  chapter19.txt  chapter2.txt  chapter20.txt  chapter21.txt  chapter22.txt  chapter24.txt  chapter5.txt  chapter7.txt  chapter8.txt  chapter9.txt  pronounce.txt
src/semanticsilm/source/: raw.txt
