[project]
name = "semanticsilm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "arkuhn", email = "contact@adamrkuhn.com" }
]
dependencies = [
    "llama-index>=0.10.65",
    "pyvis>=0.3.2",
    "bs4>=0.0.2",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "tqdm>=4.66.5",
    "thefuzz>=0.22.1",
    "spacy>=3.7.5",
    "plotly>=5.23.0",
    "scipy>=1.14.0",
    "python-louvain>=0.16",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/semanticsilm"]
